# agent-auto-dogfood

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_auto_dogfood/: __init__.py  analyzer.py  cli.py  harness.py  memory.py  metrics.py
agent_feedback_actions/: __init__.py  analyzer.py  cli.py
assets/: gen_demo.py
examples/: traces.jsonl
tests/: test_analyzer.py  test_metrics.py
