[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-feedback-actions"
version = "0.1.0"
description = "Mine AI-agent traces for dissatisfaction patterns and turn them into action items."
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.11"]

[project.scripts]
agent-feedback-actions = "agent_feedback_actions.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "SIM"]
