[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-auto-dogfood"
version = "0.1.0"
description = "Turn AI-agent traces into product todos for automatic dogfooding."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.11"]

[project.scripts]
agent-auto-dogfood = "agent_auto_dogfood.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "SIM"]
